--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "framer-motion": "^11.2.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "react-responsive-carousel": "^3.2.23",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.2"
   }
